remove scrollbar fix

--- a/apps/browser/src/popup/scss/base.scss
+++ b/apps/browser/src/popup/scss/base.scss
@@ -7,27 +7,16 @@
 }
 
 html {
-  width: 375px !important;
-  height: 600px !important;
-
-  ::-webkit-scrollbar {
-    width: 0px;
-    background: transparent;
-  }
-
-  .cdk-global-scrollblock {
+  &.cdk-global-scrollblock {
     position: unset;
-  }
-
-  .cdk-global-scrollblock body {
-    position: fixed;
-    width: 100%;
-    overflow-y: scroll;
   }
 }
 
 html,
 body {
+  width: 375px !important;
+  height: 600px !important;
+  overflow: hidden;
   font-family: $font-family-sans-serif;
   font-size: $font-size-base;
   line-height: $line-height-base;
@@ -35,10 +24,6 @@ body {
 }
 
 body {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
   color: $text-color;
   background-color: $background-color;
 
